-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11, 16
-
Component/s: hotspot
-
b30
-
aarch64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8258638 | 17 | Kim Barrett | P2 | Resolved | Fixed | b03 |
| JDK-8273787 | 15.0.5 | Olga Mikhaltcova | P2 | Resolved | Fixed | b02 |
| JDK-8273789 | 13.0.9 | Olga Mikhaltcova | P2 | Resolved | Fixed | b02 |
| JDK-8258627 | 11.0.11-oracle | Dukebot | P2 | Closed | Fixed | b01 |
| JDK-8259304 | 11.0.11 | Kim Barrett | P2 | Resolved | Fixed | b01 |
| JDK-8262792 | openjdk8u302 | Aleksey Shipilev | P2 | Resolved | Fixed | b01 |
| JDK-8259289 | 8u291 | Fairoz Matte | P2 | Closed | Fixed | b01 |
| JDK-8262567 | emb-8u291 | Fairoz Matte | P2 | Resolved | Fixed | team |
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/983c483a-6907-44e0-ad29-98c7183575e2-S14458/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/691d0765-867a-4058-a79f-b9916f75cf01/runs/862f5c77-0dac-4e2a-9e08-410abf2d5cee/workspace/open/src/hotspot/share/gc/parallel/psOldGen.hpp:62), pid=5353, tid=5359
# assert(covered_region.contains(new_memregion)) failed: new region is not in covered_region [ 0x00000000c0000000, 0x00000000cfd80000 ], new region [ 0x00000000cfd81198, 0x00000000cfd83198 ], object space [ 0x00000000c0000000, 0x00000000cfd83198 ]
- backported by
-
JDK-8258638 Parallel GC crash in gc/parallel/TestDynShrinkHeap.java: new region is not in covered_region
-
- Resolved
-
-
JDK-8259304 Parallel GC crash in gc/parallel/TestDynShrinkHeap.java: new region is not in covered_region
-
- Resolved
-
-
JDK-8262567 Parallel GC crash in gc/parallel/TestDynShrinkHeap.java: new region is not in covered_region
-
- Resolved
-
-
JDK-8262792 Parallel GC crash in gc/parallel/TestDynShrinkHeap.java: new region is not in covered_region
-
- Resolved
-
-
JDK-8273787 Parallel GC crash in gc/parallel/TestDynShrinkHeap.java: new region is not in covered_region
-
- Resolved
-
-
JDK-8273789 Parallel GC crash in gc/parallel/TestDynShrinkHeap.java: new region is not in covered_region
-
- Resolved
-
-
JDK-8258627 Parallel GC crash in gc/parallel/TestDynShrinkHeap.java: new region is not in covered_region
-
- Closed
-
-
JDK-8259289 Parallel GC crash in gc/parallel/TestDynShrinkHeap.java: new region is not in covered_region
-
- Closed
-
- relates to
-
JDK-8259271 gc/parallel/TestDynShrinkHeap.java still fails "assert(covered_region.contains(new_memregion)) failed: new region is not in covered_region"
-
- Closed
-
-
JDK-8260704 ParallelGC: oldgen expansion needs release-store for _end
-
- Closed
-
- links to
-
Commit
openjdk/jdk13u-dev/56158e5d
-
Commit
openjdk/jdk15u-dev/7d57365e
-
Commit
openjdk/jdk16/61390d8e
-
Review
openjdk/jdk13u-dev/261
-
Review
openjdk/jdk15u-dev/99
-
Review
openjdk/jdk16/35